; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_aka.c_eap_aka_verify_mac.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_aka.c_eap_aka_verify_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_aka_data = type { i64, i32 }
%struct.wpabuf = type { i32 }

@EAP_TYPE_AKA_PRIME = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eap_aka_data*, %struct.wpabuf*, i32*, i32*, i64)* @eap_aka_verify_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eap_aka_verify_mac(%struct.eap_aka_data* %0, %struct.wpabuf* %1, i32* %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.eap_aka_data*, align 8
  %8 = alloca %struct.wpabuf*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store %struct.eap_aka_data* %0, %struct.eap_aka_data** %7, align 8
  store %struct.wpabuf* %1, %struct.wpabuf** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load %struct.eap_aka_data*, %struct.eap_aka_data** %7, align 8
  %13 = getelementptr inbounds %struct.eap_aka_data, %struct.eap_aka_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @EAP_TYPE_AKA_PRIME, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %26

17:                                               ; preds = %5
  %18 = load %struct.eap_aka_data*, %struct.eap_aka_data** %7, align 8
  %19 = getelementptr inbounds %struct.eap_aka_data, %struct.eap_aka_data* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.wpabuf*, %struct.wpabuf** %8, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = load i64, i64* %11, align 8
  %25 = call i32 @eap_sim_verify_mac_sha256(i32 %20, %struct.wpabuf* %21, i32* %22, i32* %23, i64 %24)
  store i32 %25, i32* %6, align 4
  br label %35

26:                                               ; preds = %5
  %27 = load %struct.eap_aka_data*, %struct.eap_aka_data** %7, align 8
  %28 = getelementptr inbounds %struct.eap_aka_data, %struct.eap_aka_data* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.wpabuf*, %struct.wpabuf** %8, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = load i64, i64* %11, align 8
  %34 = call i32 @eap_sim_verify_mac(i32 %29, %struct.wpabuf* %30, i32* %31, i32* %32, i64 %33)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %26, %17
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @eap_sim_verify_mac_sha256(i32, %struct.wpabuf*, i32*, i32*, i64) #1

declare dso_local i32 @eap_sim_verify_mac(i32, %struct.wpabuf*, i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
